corrected lettter spacing header

--- a/main.css
+++ b/main.css
@@ -36,7 +36,7 @@ common
  .header-joanna-sz, .header-text {
  	text-align: right;
  	text-transform: uppercase;
- 	letter-spacing: 3px;
+ 	letter-spacing: 1px;
  	color: var(--spanish-pink-header-text);
 }
 /*
